--- a/index.html
+++ b/index.html
@@ -1,12 +1,128 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vending Machine</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vending Machine</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <img src="" alt="">
+  <img class="logo-img" src="./images/logo.svg" alt="">
+  <section class="select-part">
+    <h1 class="sc-out">Cola</h1>
+    <ul class="my-cola">
+      <li class="cola-item">
+        <img src="./images/Original_Cola.svg" alt="">
+        <p class="item-name">Original_Cola</p>
+        <p class="price">1000원</p>
+      </li>
+      <li class="cola-item sold-out">
+        <img src="./images/Violet_Cola.svg" alt="">
+        <p class="item-name">
+          Violet_Cola
+        </p>
+        <p class="price">1000원</p>
+      </li>
+      <li class="cola-item">
+        <img src="./images/Yellow_Cola.svg" alt="">
+        <p class="item-name">
+          Yellow_Cola
+        </p>
+        <p class="price">1000원</p>
+      </li>
+      <li class="cola-item">
+        <img src="./images/Cool_Cola.svg" alt="">
+        <p class="item-name">
+          Cool_Cola
+        </p>
+        <p class="price">1000원</p>
+      </li>
+      <li class="cola-item">
+        <img src="./images/Green_Cola.svg" alt="">
+        <p class="item-name">
+          Green_Cola
+        </p>
+        <p class="price">1000원</p>
+      </li>
+      <li class="cola-item">
+        <img src="./images/Orange_Cola.svg" alt="">
+        <p class="item-name">
+          Orange_Cola
+        </p>
+        <p class="price">1000원</p>
+      </li>
+    </ul>
+
+    <!-- 잔액파트 뭘로 묶어줘야할지?  -->
+    <section class="charge-wrapper">
+      <h2 class="sc-out">금액과 획득</h2>
+      <div class="balance">
+        <p>잔액 :</p>
+        <span>1,000원</span>
+      </div>
+      <button type="button" class="money-btn">거스름돈 반환</button>
+      <input type="text" placeholder="입금액 입력" class="input-money">
+      <button type="button" class="money-btn">입금</button>
+      <ul class="cola-get min">
+        <li class="order-item">
+          <img src="./images/Original_Cola.svg" alt="">
+          <p class="item-name">Original_Cola</p>
+          <p class="numberof">1</p>
+        </li>
+        <li class="order-item">
+          <img src="./images/Green_Cola.svg" alt="">
+          <p class="item-name">Green_Cola</p>
+          <p class="numberof">2</p>
+        </li>
+        <li class="order-item">
+          <img src="./images/Orange_Cola.svg" alt="">
+          <p class="item-name">Orange_Cola</p>
+          <p class="numberof">1</p>
+        </li>
+      </ul>
+      <button class="get-btn">획득</button>
+    </section>
+
+
+    <section>
+      <h2 class="get-title">획득한음료</h2>
+      <ul class="cola-get wide">
+        <li class="order-item wide">
+          <img src="./images/Original_Cola.svg" alt="">
+          <p class="item-name">Original_Cola</p>
+          <p class="numberof">1</p>
+        </li>
+        <li class="order-item">
+          <img src="./images/Green_Cola.svg" alt="">
+          <p class="item-name">Green_Cola</p>
+          <p class="numberof">2</p>
+        </li>
+        <li class="order-item">
+          <img src="./images/Orange_Cola.svg" alt="">
+          <p class="item-name">Orange_Cola</p>
+          <p class="numberof">1</p>
+        </li>
+      </ul>
+
+    </section>
+
+
+
+  </section>
+
+
+
+
 </body>
+
 </html>
+
+<!-- 잔액(.balance) / 소지금 디자인 
+버튼 디자인  
+획득 음료  -->
