--- a/index.html
+++ b/index.html
@@ -85,12 +85,17 @@
           <p class="item-name">Orange_Cola</p>
           <p class="numberof">1</p>
         </li>
+
       </ul>
       <button class="get-btn">획득</button>
     </section>
 
+    <div class="balance having">
+      <p>소지금 :</p>
+      <span>25,000원</span>
+    </div>
 
-    <section>
+    <section class="get-wrapper">
       <h2 class="get-title">획득한음료</h2>
       <ul class="cola-get wide">
         <li class="order-item wide">
@@ -108,21 +113,16 @@
           <p class="item-name">Orange_Cola</p>
           <p class="numberof">1</p>
         </li>
+        <li class="order-item">
+          <img src="./images/violet_Cola.svg" alt="">
+          <p class="item-name">Violet_Cola</p>
+          <p class="numberof">5</p>
+        </li>
       </ul>
-
     </section>
-
-
-
+    <p class="total">총금액: 9,000 원</p>
   </section>
-
-
-
 
 </body>
 
 </html>
-
-<!-- 잔액(.balance) / 소지금 디자인 
-버튼 디자인  
-획득 음료  -->
