마크업수정

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p class="item-name">
             Violet_Cola
           </p>
-          <button type="button" class="price">1000원</button>
+          <button type="button" class="price" disabled>1000원</button>
         </li>
         <li class="cola-item">
           <img src="./images/Yellow_Cola.svg" alt="">
@@ -125,7 +125,7 @@
             <p class="numberof">1</p>
           </li>
           <li class="order-item">
-            <img src="./images/violet_Cola.svg" alt="">
+            <img src="./images/Violet_Cola.svg" alt="">
             <p class="item-name">Violet_Cola</p>
             <p class="numberof">5</p>
           </li>
