마크업수정

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <img src="./images/logo.svg" alt="로고" class="logo-img">
+  <img src="./images/logo.svg" alt="콜라 밴딩머신" class="logo-img">
   <section class="vending-wrapper">
     <h1 class="sc-out">콜라 밴딩머신</h1>
 
