마크업수정

--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
           <li class="order-item">
             <img src="./images/Original_Cola.svg" alt="">
             <p class="item-name">Original_Cola</p>
-            <p class="numberof">1</p>
+            <p class="item-number">1</p>
           </li>
           <li class="order-item">
             <img src="./images/Green_Cola.svg" alt="">
             <p class="item-name">Green_Cola</p>
-            <p class="numberof">2</p>
+            <p class="item-number">2</p>
           </li>
           <li class="order-item">
             <img src="./images/Orange_Cola.svg" alt="">
             <p class="item-name">Orange_Cola</p>
-            <p class="numberof">1</p>
+            <p class="item-number">1</p>
           </li>
 
         </ul>
@@ -112,22 +112,22 @@
           <li class="order-item wide">
             <img src="./images/Original_Cola.svg" alt="">
             <p class="item-name">Original_Cola</p>
-            <p class="numberof">1</p>
+            <p class="item-number">1</p>
           </li>
           <li class="order-item">
             <img src="./images/Green_Cola.svg" alt="">
             <p class="item-name">Green_Cola</p>
-            <p class="numberof">2</p>
+            <p class="item-number">2</p>
           </li>
           <li class="order-item">
             <img src="./images/Orange_Cola.svg" alt="">
             <p class="item-name">Orange_Cola</p>
-            <p class="numberof">1</p>
+            <p class="item-number">1</p>
           </li>
           <li class="order-item">
             <img src="./images/Violet_Cola.svg" alt="">
             <p class="item-name">Violet_Cola</p>
-            <p class="numberof">5</p>
+            <p class="item-number">5</p>
           </li>
         </ul>
         <p class="total">총금액 : 9,000 원</p>
