--- a/index.html
+++ b/index.html
@@ -21,53 +21,65 @@
     <section class="select-part">
       <h2 class="sc-out">Cola</h2>
       <ul class="my-cola">
-        <li class="cola-item">
-          <img src="./images/Original_Cola.svg" alt="">
-          <p class="item-name">Original_Cola</p>
-          <button type="button" class="price">1000원</button>
+        <li >
+          <button type="button" class="cola-item">
+            <img src="./images/Original_Cola.svg" alt="">
+          <strong class="item-name">Original_Cola</strong>
+          <span class="price">1000원</span>
+          </button>
         </li>
 
-        <li class="cola-item sold-out">
-          <img src="./images/Violet_Cola.svg" alt="">
-          <p class="item-name">
-            Violet_Cola
-          </p>
-          <button type="button" class="price" disabled>1000원</button>
+        <li>
+          <button class="cola-item sold-out" disabled>
+            <img src="./images/Violet_Cola.svg" alt="">
+            <strong class="item-name">
+              Violet_Cola
+            </strong>
+            <span class="price">1000원</span>
+          </button>
         </li>
-        <li class="cola-item">
-          <img src="./images/Yellow_Cola.svg" alt="">
-          <p class="item-name">
-            Yellow_Cola
-          </p>
-          <button type="button" class="price">1000원</button>
+        <li>
+          <button class="cola-item">
+            <img src="./images/Yellow_Cola.svg" alt="">
+            <strong class="item-name">
+              Yellow_Cola
+            </strong>
+            <span class="price">1000원</span>
+          </button>
         </li>
-        <li class="cola-item">
-          <img src="./images/Cool_Cola.svg" alt="">
-          <p class="item-name">
-            Cool_Cola
-          </p>
-          <button type="button" class="price">1000원</button>
+        <li>
+          <button class="cola-item">
+            <img src="./images/Cool_Cola.svg" alt="">
+            <strong class="item-name">
+              Cool_Cola
+            </strong>
+            <span class="price">1000원</span>
+          </button>
         </li>
-        <li class="cola-item">
-          <img src="./images/Green_Cola.svg" alt="">
-          <p class="item-name">
-            Green_Cola
-          </p>
-          <button type="button" class="price">1000원</button>
+        <li>
+          <button class="cola-item">
+            <img src="./images/Green_Cola.svg" alt="">
+            <strong class="item-name">
+              Green_Cola
+            </strong>
+            <span class="price">1000원</span>
+          </button>
         </li>
-        <li class="cola-item">
-          <img src="./images/Orange_Cola.svg" alt="">
-          <p class="item-name">
-            Orange_Cola
-          </p>
-          <button type="button" class="price">1000원</button>
+        <li>
+          <button class="cola-item">
+            <img src="./images/Orange_Cola.svg" alt="">
+            <strong class="item-name">
+              Orange_Cola
+            </strong>
+            <span class="price">1000원</span>
+          </button>
         </li>
       </ul>
 
       <section class="charge-wrapper">
         <h2 class="sc-out">금액과 획득</h2>
         <div class="balance">
-          <p>잔액 :</p>
+          <span>잔액 :</span>
           <span>1,000원</span>
         </div>
         <button type="button" class="money-btn">거스름돈 반환</button>
@@ -77,18 +89,18 @@
         <ul class="cola-get min">
           <li class="order-item">
             <img src="./images/Original_Cola.svg" alt="">
-            <p class="item-name">Original_Cola</p>
-            <p class="item-number">1</p>
+            <span class="item-name">Original_Cola</span>
+            <span class="item-number">1</span>
           </li>
           <li class="order-item">
             <img src="./images/Green_Cola.svg" alt="">
-            <p class="item-name">Green_Cola</p>
-            <p class="item-number">2</p>
+            <span class="item-name">Green_Cola</span>
+            <span class="item-number">2</span>
           </li>
           <li class="order-item">
             <img src="./images/Orange_Cola.svg" alt="">
-            <p class="item-name">Orange_Cola</p>
-            <p class="item-number">1</p>
+            <span class="item-name">Orange_Cola</span>
+            <span class="item-number">1</span>
           </li>
 
         </ul>
@@ -109,28 +121,48 @@
       <section class="get-wrapper">
         <h2 class="get-title">획득한음료</h2>
         <ul class="cola-get wide">
-          <li class="order-item wide">
+          <li class="order-item">
             <img src="./images/Original_Cola.svg" alt="">
-            <p class="item-name">Original_Cola</p>
-            <p class="item-number">1</p>
+            <span class="item-name">Original_Cola</span>
+            <span class="item-number">1</span>
           </li>
           <li class="order-item">
             <img src="./images/Green_Cola.svg" alt="">
-            <p class="item-name">Green_Cola</p>
-            <p class="item-number">2</p>
+            <span class="item-name">Green_Cola</span>
+            <span class="item-number">2</span>
           </li>
           <li class="order-item">
             <img src="./images/Orange_Cola.svg" alt="">
-            <p class="item-name">Orange_Cola</p>
-            <p class="item-number">1</p>
+            <span class="item-name">Orange_Cola</span>
+            <span class="item-number">1</span>
           </li>
           <li class="order-item">
             <img src="./images/Violet_Cola.svg" alt="">
-            <p class="item-name">Violet_Cola</p>
-            <p class="item-number">5</p>
+            <span class="item-name">Violet_Cola</span>
+            <span class="item-number">5</span>
+          </li>
+          <li class="order-item">
+            <img src="./images/Original_Cola.svg" alt="">
+            <span class="item-name">Original_Cola</span>
+            <span class="item-number">1</span>
+          </li>
+          <li class="order-item">
+            <img src="./images/Green_Cola.svg" alt="">
+            <span class="item-name">Green_Cola</span>
+            <span class="item-number">2</span>
+          </li>
+          <li class="order-item">
+            <img src="./images/Orange_Cola.svg" alt="">
+            <span class="item-name">Orange_Cola</span>
+            <span class="item-number">1</span>
+          </li>
+          <li class="order-item">
+            <img src="./images/Violet_Cola.svg" alt="">
+            <span class="item-name">Violet_Cola</span>
+            <span class="item-number">5</span>
           </li>
         </ul>
-        <p class="total">총금액 : 9,000 원</p>
+        <span class="total">총금액 : 9,000 원</span>
       </section>
     </div>
   </section>
