--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <section class="charge-wrapper">
         <h2 class="sc-out">금액과 획득</h2>
         <div class="balance">
-          <span>잔액 :</span>
+          잔액 :
           <span>1,000원</span>
         </div>
         <button type="button" class="money-btn">거스름돈 반환</button>
@@ -109,11 +109,12 @@
 
     </section>
 
-    <div class="getpart-wrapper">
+    <section class="getpart-wrapper">
+      <h2 class="sc-out">소지금과 획득한음료</h2>
       <section class="having-money">
         <h2 class="sc-out">소지금</h2>
         <div class="balance having">
-          <p>소지금 :</p>
+          소지금 :
           <span>25,000원</span>
         </div>
       </section>
@@ -164,7 +165,7 @@
         </ul>
         <span class="total">총금액 : 9,000 원</span>
       </section>
-    </div>
+    </section>
   </section>
 
 </body>
