--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
       <h2 class="sc-out">Cola</h2>
       <ul class="my-cola">
         <li>
-          <button type="button" class="cola-item">
-            <img src="./images/Original_Cola.svg" alt="">
+          <button id="cola-item" type="button" class="cola-item">
+            <img src="./images/Original_Cola.svg" alt="original cola">
             <strong class="item-name">Original_Cola</strong>
             <span class="price">1000원</span>
           </button>
         </li>
 
         <li>
-          <button class="cola-item sold-out" disabled>
-            <img src="./images/Violet_Cola.svg" alt="">
+          <button id="cola-item" class="cola-item sold-out" disabled>
+            <img src="./images/Violet_Cola.svg" alt="violet cola">
             <strong class="item-name">
               Violet_Cola
             </strong>
@@ -39,8 +39,8 @@
           </button>
         </li>
         <li>
-          <button class="cola-item">
-            <img src="./images/Yellow_Cola.svg" alt="">
+          <button id="cola-item" class="cola-item">
+            <img src="./images/Yellow_Cola.svg" alt="yellow cola">
             <strong class="item-name">
               Yellow_Cola
             </strong>
@@ -48,8 +48,8 @@
           </button>
         </li>
         <li>
-          <button class="cola-item">
-            <img src="./images/Cool_Cola.svg" alt="">
+          <button id="cola-item" class="cola-item">
+            <img src="./images/Cool_Cola.svg" alt="cool cola">
             <strong class="item-name">
               Cool_Cola
             </strong>
@@ -57,8 +57,8 @@
           </button>
         </li>
         <li>
-          <button class="cola-item">
-            <img src="./images/Green_Cola.svg" alt="">
+          <button id="cola-item" class="cola-item">
+            <img src="./images/Green_Cola.svg" alt="green cola">
             <strong class="item-name">
               Green_Cola
             </strong>
@@ -66,8 +66,8 @@
           </button>
         </li>
         <li>
-          <button class="cola-item">
-            <img src="./images/Orange_Cola.svg" alt="">
+          <button id="cola-item" class="cola-item">
+            <img src="./images/Orange_Cola.svg" alt="orange cola">
             <strong class="item-name">
               Orange_Cola
             </strong>
@@ -79,32 +79,25 @@
       <section class="charge-wrapper">
         <h2 class="sc-out">금액과 획득</h2>
         <div class="balance">
-          잔액 :
-          <span>1,000원</span>
+          <span class="balance-txt">
+            잔액 : <span><em id="balance">0 </em> 원</span>
+          </span>
         </div>
         <button type="button" class="money-btn">거스름돈 반환</button>
         <input type="text" placeholder="입금액 입력"
-          oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="input-money">
-        <button type="button" class="money-btn">입금</button>
-        <ul class="cola-get min">
-          <li class="order-item">
+          oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="input-money"
+          id="payment-input">
+        <button type="button" class="money-btn" id="payment">입금</button>
+
+        <ul id="cart" class="cola-get min">
+          <!-- <li class="order-item">
             <img src="./images/Original_Cola.svg" alt="">
             <span class="item-name">Original_Cola</span>
-            <span class="item-number">1</span>
+            <span class="item-number">1</span> -->
           </li>
-          <li class="order-item">
-            <img src="./images/Green_Cola.svg" alt="">
-            <span class="item-name">Green_Cola</span>
-            <span class="item-number">2</span>
-          </li>
-          <li class="order-item">
-            <img src="./images/Orange_Cola.svg" alt="">
-            <span class="item-name">Orange_Cola</span>
-            <span class="item-number">1</span>
-          </li>
-
         </ul>
-        <button class="get-btn">획득</button>
+
+        <button class="get-btn" id="obtain-item">획득</button>
       </section>
 
     </section>
@@ -114,8 +107,9 @@
       <section class="having-money">
         <h2 class="sc-out">소지금</h2>
         <div class="balance having">
-          소지금 :
-          <span>25,000원</span>
+          <span class="balance-txt">
+            소지금 : <span><em id="pocket-money">25,000 </em> 원</span>
+          </span>
         </div>
       </section>
 
@@ -127,46 +121,14 @@
             <span class="item-name">Original_Cola</span>
             <span class="item-number">1</span>
           </li>
-          <li class="order-item">
-            <img src="./images/Green_Cola.svg" alt="">
-            <span class="item-name">Green_Cola</span>
-            <span class="item-number">2</span>
-          </li>
-          <li class="order-item">
-            <img src="./images/Orange_Cola.svg" alt="">
-            <span class="item-name">Orange_Cola</span>
-            <span class="item-number">1</span>
-          </li>
-          <li class="order-item">
-            <img src="./images/Violet_Cola.svg" alt="">
-            <span class="item-name">Violet_Cola</span>
-            <span class="item-number">5</span>
-          </li>
-          <li class="order-item">
-            <img src="./images/Original_Cola.svg" alt="">
-            <span class="item-name">Original_Cola</span>
-            <span class="item-number">1</span>
-          </li>
-          <li class="order-item">
-            <img src="./images/Green_Cola.svg" alt="">
-            <span class="item-name">Green_Cola</span>
-            <span class="item-number">2</span>
-          </li>
-          <li class="order-item">
-            <img src="./images/Orange_Cola.svg" alt="">
-            <span class="item-name">Orange_Cola</span>
-            <span class="item-number">1</span>
-          </li>
-          <li class="order-item">
-            <img src="./images/Violet_Cola.svg" alt="">
-            <span class="item-name">Violet_Cola</span>
-            <span class="item-number">5</span>
-          </li>
         </ul>
-        <span class="total">총금액 : 9,000 원</span>
+        <span class="total">총금액 : <em id="total-money">5,000</em> 원</span>
       </section>
     </section>
   </section>
+
+  <!-- <script type="module" src="js/data.js"></script> -->
+  <script type="module" src="js/main.js"></script>
 
 </body>
 
